[package]
name = "ocpp-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.20", features = ["ws","headers"] }

futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rust-ocpp = "0.2.2"
serde_json = "1.0.107"
serde = "1.0.189"
chrono = {version = "0.4.31", features = ["serde"]}
serde_derive = "1.0.189"

clap = "3.2.23"
thiserror = "1.0.50"

[[bin]]
name = "ocpp-server"
path = "src/main.rs"

